--- a/Assembly-CSharp-firstpass.csproj
+++ b/Assembly-CSharp-firstpass.csproj
@@ -9,10 +9,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{0B4F9A89-388A-0E8B-A6FD-C9FC35CB9D1D}</ProjectGuid>
+    <ProjectGuid>{7BFC97F0-2F2A-7C8F-6EDC-8683CFBFDB81}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp</AssemblyName>
+    <AssemblyName>Assembly-CSharp-firstpass</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -48,7 +48,7 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Unity/VSTU</UnityProjectGenerator>
     <UnityProjectGeneratorVersion>2.8.3.0</UnityProjectGeneratorVersion>
-    <UnityProjectType>Game:1</UnityProjectType>
+    <UnityProjectType>GamePlugins:3</UnityProjectType>
     <UnityBuildTarget>StandaloneOSX:2</UnityBuildTarget>
     <UnityVersion>2019.4.13f1</UnityVersion>
   </PropertyGroup>
@@ -64,19 +64,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\SD Unity-Chan Haon Custom\Unity-Chan!\Script\RandomWind.cs" />
-    <Compile Include="Assets\SD Unity-Chan Haon Custom\Unity-Chan!\Script\SpringBone.cs" />
-    <Compile Include="Assets\SD Unity-Chan Haon Custom\Unity-Chan!\Script\SpringCollider.cs" />
-    <Compile Include="Assets\SD Unity-Chan Haon Custom\Unity-Chan!\Script\SpringManager.cs" />
-    <Compile Include="Assets\Scripts\BreakableObjectController.cs" />
-    <Compile Include="Assets\Scripts\CatcherController.cs" />
-    <Compile Include="Assets\Scripts\CharacterController.cs" />
-    <Compile Include="Assets\Scripts\StageManager.cs" />
-    <None Include="Assets\Shaders\SelectionBoxShader.shader" />
-    <None Include="Assets\Shaders\GridPlaneShader.shader" />
-    <None Include="Assets\SD Unity-Chan Haon Custom\Shader\readme.txt" />
-    <None Include="Assets\SD Unity-Chan Haon Custom\Shader\Unitychan_chara_eye.shader" />
-    <None Include="Assets\SD Unity-Chan Haon Custom\_Readme\Readme SD Unity-Chan Haon Custom Series.txt" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\Edge.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\EdgeList.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\EdgeReorderer.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\Halfedge.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\HalfedgePriorityQueue.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\ICoord.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\LR.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\Site.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\SiteList.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\Triangle.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\Vertex.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Delaunay\Voronoi.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Geom\Circle.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Geom\LineSegment.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Geom\Polygon.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Geom\Rectf.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Geom\Vector2f.cs" />
+    <Compile Include="Assets\Plugins\Voronoi\Geom\Winding.cs" />
     <Reference Include="UnityEngine">
       <HintPath>/Applications/2019.4.13f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -633,12 +638,7 @@
       <HintPath>/Users/kaiba/Documents/Unity Projects/UT-VGamejam2020 Project/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
-      <Project>{7BFC97F0-2F2A-7C8F-6EDC-8683CFBFDB81}</Project>
-      <Name>Assembly-CSharp-firstpass</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
